# qt_web_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
res/: library.html  qtweb_resources.qrc
src/: booklending.h  booklistmodel.cpp  booklistmodel.h  bookshelfwidget.cpp  bookshelfwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  utils.h
